<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="cz.utb.fai.subjectinfo.SubjectInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SubjectInfoActivity">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{ viewModel.subjectInfoValue.nazev }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="35dp"
            android:ems="10"
            android:hint="@string/txtSubject_hint"
            android:inputType="text"
            android:text="@={ viewModel.zkratkaMutable }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/btnSave_text"
            android:onClick="@{ () -> viewModel.search() }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="80dp"
            android:text="@{ String.valueOf(viewModel.subjectInfoValue.kreditu) }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabel" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/txtSubjectShorcut_hint"
            android:textColor="#F44336"
            app:layout_constraintBottom_toTopOf="@+id/editTextText"
            app:layout_constraintStart_toStartOf="@+id/editTextText"
            android:visibility="@{viewModel.showHint ? View.VISIBLE: View.GONE}"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/subjectInfo_not_found"
            app:layout_constraintEnd_toEndOf="@+id/editTextText"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            android:visibility="@{viewModel.showNotFound ? View.VISIBLE: View.GONE}"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="@{viewModel.showProgressBar ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/btn_more_text"
            android:onClick="@{ () -> viewModel.toDetail() }"
            app:layout_constraintStart_toEndOf="@+id/btnSave"
            app:layout_constraintTop_toTopOf="@+id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>